<resources>
    <string name="tap_on_camera_to_add_photo">Tap on camera to add photo</string>
    <string name="camera">Camera</string>
    <string name="share">Share</string>
    <string name="color_palette">Color Palatte</string>
    <string name="moon">Moon</string>
    <string name="sun">Sun</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="fill_color">FIll Color Sample</string>
    <string name="paint_roller">Paint Roller</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <string name="button_ok">Ok</string>
    <string name="no">No</string>
    <string name="save">Save Color</string>
    <string name="yes">Yes</string>
    <string name="choose_from_camera">Choose Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_from_album">Choose from gallery</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_photo">Share Photo</string>
    <string name="send_to_color_consultant">Send to Color Consultant</string>
    <string name="save_to_project">Save to Project</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="back">Back</string>
    <string name="logo">Logo</string>
</resources>