<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/layout_bg"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context="com.whitelabel.android.ui.paint.fragment.PaintFragment">

    <FrameLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Icon (left aligned) -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back" />

        <!-- Center Logo -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/upglogo_1" />

    </FrameLayout>

    <com.whitelabel.android.view.RecolourImageView
        android:id="@+id/selected_photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/colorOptionList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        tools:src="@drawable/outline_image_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eyeDrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/selected_photo_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/color_palette"
            android:src="@drawable/ic_color_picker" />

        <ImageView
            android:id="@+id/eyeDropTint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/color_palette"
            android:src="@drawable/color_dropped" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorOptionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/currentColorDetail"
        tools:itemCount="10"
        tools:listitem="@layout/color_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/currentColorDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout">

        <TextView
            android:id="@+id/selectedColorDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/paint_roller"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveColorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageGalleryBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camera"
            android:src="@drawable/gallery" />

        <ImageButton
            android:id="@+id/colorPickerBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/gallery"
            android:src="@drawable/color_picker" />

        <ImageButton
            android:id="@+id/activatedPaintBrushBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/paint_roller"
            android:src="@drawable/paint_brush" />

        <ImageButton
            android:id="@+id/shareImageBtn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/share" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
